[gd_scene load_steps=24 format=3 uid="uid://c1vqe1mleaxn5"]

[ext_resource type="Script" path="res://code/GuitarPlayer.gd" id="1_rfcay"]
[ext_resource type="Script" path="res://code/BeatKeeper.gd" id="1_vsqgt"]
[ext_resource type="Resource" uid="uid://dm5n0hdt8j3c4" path="res://resources/user_made_patterns/user_pattern_7954.tres" id="2_mib37"]
[ext_resource type="Resource" uid="uid://ct7438agibkmm" path="res://resources/user_made_patterns/user_pattern_7785.tres" id="3_aridk"]
[ext_resource type="Resource" uid="uid://y3etyvvdypjo" path="res://resources/user_made_patterns/user_pattern_28792.tres" id="4_cw7j2"]
[ext_resource type="Script" path="res://PatternRecorder.gd" id="4_sv48d"]
[ext_resource type="AudioStream" uid="uid://ca0gd8qg7ui3g" path="res://assets/BackingCminor120.wav" id="5_3w1ts"]
[ext_resource type="AudioStream" uid="uid://chcwth2exd7oj" path="res://assets/instruments/distorted guitar/C_Minor/A [2024-08-14 174250].wav" id="7_yyivu"]
[ext_resource type="AudioStream" uid="uid://c581y72t7askn" path="res://assets/instruments/distorted guitar/C_Minor/S [2024-08-14 174251].wav" id="8_18pwm"]
[ext_resource type="AudioStream" uid="uid://bif0l45dejytd" path="res://assets/instruments/distorted guitar/C_Minor/D [2024-08-14 174252].wav" id="9_ps6nl"]
[ext_resource type="AudioStream" uid="uid://cvrt6tv0rd8v4" path="res://assets/instruments/distorted guitar/C_Minor/F [2024-08-14 174253].wav" id="10_gpl0o"]
[ext_resource type="AudioStream" uid="uid://cgoppxtfb8yjc" path="res://assets/instruments/distorted guitar/C_Minor/J [2024-08-14 174254].wav" id="11_2t6c0"]
[ext_resource type="AudioStream" uid="uid://c8ovumieq5kyt" path="res://assets/instruments/distorted guitar/C_Minor/K [2024-08-14 174255].wav" id="12_11jpo"]
[ext_resource type="AudioStream" uid="uid://bfbb8tcd1soj1" path="res://assets/instruments/distorted guitar/C_Minor/L [2024-08-14 174256].wav" id="13_2hp8a"]
[ext_resource type="AudioStream" uid="uid://dn7gqed1ncuhf" path="res://assets/instruments/distorted guitar/C_Minor/_ [2024-08-14 174257].wav" id="14_6ftxw"]
[ext_resource type="AudioStream" uid="uid://blcyewa4tiqhc" path="res://assets/instruments/distorted guitar/C_Minor/Q [2024-08-14 174257].wav" id="15_8oyep"]
[ext_resource type="AudioStream" uid="uid://br3me3tnaq3u0" path="res://assets/instruments/distorted guitar/C_Minor/W [2024-08-14 174258].wav" id="16_g8vwd"]
[ext_resource type="AudioStream" uid="uid://bkmm1x8q7avx6" path="res://assets/instruments/distorted guitar/C_Minor/E [2024-08-14 174259].wav" id="17_rfvoe"]
[ext_resource type="AudioStream" uid="uid://jf8hnvvfu2dh" path="res://assets/instruments/distorted guitar/C_Minor/R [2024-08-14 174300].wav" id="18_k5g6r"]
[ext_resource type="AudioStream" uid="uid://brj18epn271pw" path="res://assets/instruments/distorted guitar/C_Minor/U [2024-08-14 174301].wav" id="19_b4c6u"]
[ext_resource type="AudioStream" uid="uid://c1li4mmqejmtu" path="res://assets/instruments/distorted guitar/C_Minor/I [2024-08-14 174302].wav" id="20_227ad"]
[ext_resource type="AudioStream" uid="uid://7auf80ds5hmp" path="res://assets/instruments/distorted guitar/C_Minor/O [2024-08-14 174303].wav" id="21_hwuyp"]
[ext_resource type="AudioStream" uid="uid://evu0y18dakvc" path="res://assets/instruments/distorted guitar/C_Minor/P [2024-08-14 174304].wav" id="22_usjri"]

[node name="Control" type="Node2D"]

[node name="BeatKeeper" type="Node" parent="."]
script = ExtResource("1_vsqgt")
patterns = Array[Resource("res://resources/Pattern.gd")]([ExtResource("2_mib37"), ExtResource("3_aridk"), ExtResource("4_cw7j2")])

[node name="BackingTrack" type="AudioStreamPlayer" parent="BeatKeeper"]
stream = ExtResource("5_3w1ts")
bus = &"BackingTrack"

[node name="PatternRecorder" type="Node" parent="BeatKeeper"]
script = ExtResource("4_sv48d")

[node name="GuitarPlayer" type="Node" parent="."]
script = ExtResource("1_rfcay")

[node name="_A" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("7_yyivu")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_S" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("8_18pwm")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_D" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("9_ps6nl")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_F" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("10_gpl0o")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_J" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("11_2t6c0")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_K" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("12_11jpo")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_L" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("13_2hp8a")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_colon" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("14_6ftxw")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_Q" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("15_8oyep")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_W" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("16_g8vwd")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_E" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("17_rfvoe")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_R" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("18_k5g6r")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_U" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("19_b4c6u")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_I" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("20_227ad")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_O" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("21_hwuyp")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="_P" type="AudioStreamPlayer" parent="GuitarPlayer"]
stream = ExtResource("22_usjri")
volume_db = -10.0
bus = &"PlayerInstrument"

[node name="beat_indicator" type="ColorRect" parent="."]
offset_left = 867.0
offset_top = 440.0
offset_right = 978.0
offset_bottom = 551.0
color = Color(0, 0, 1, 1)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 858.0
offset_top = 369.0
offset_right = 987.0
offset_bottom = 411.0
theme_override_font_sizes/font_size = 30
text = "SCORE: 0"

[node name="ScoreLabel3" type="Label" parent="."]
offset_left = 25.0
offset_top = 12.0
offset_right = 259.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 30
text = "Recently Played:"

[node name="ScoreLabel4" type="Label" parent="."]
offset_left = 44.0
offset_top = 73.0
offset_right = 447.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 30
text = "Recently Played:"
autowrap_mode = 1

[node name="MagicNames" type="Label" parent="."]
offset_left = 30.0
offset_top = 605.0
offset_right = 1897.0
offset_bottom = 1069.0
theme_override_font_sizes/font_size = 30
text = "Recently Played:"
autowrap_mode = 2

[node name="MagicEffect" type="Label" parent="."]
offset_left = 1083.0
offset_top = 16.0
offset_right = 1847.0
offset_bottom = 342.0
theme_override_font_sizes/font_size = 30
text = "Effect:"
autowrap_mode = 2
